# glo

./: .gitignore  README.md  build.zig  build.zig.zon  build_libs.zig  compile_flags.txt  meson.build  meson_options.txt
example/: main.cpp  meson.build
example/camera/: main.cpp  meson.build
example/dx11/: main.cpp  meson.build
example/gl3/: main.cpp  meson.build
example/glfw_platform/: glfw_platform.cpp  glfw_platform.h  meson.build
example/normalmap/: main.cpp  meson.build  normal_mapping_fs.h  normal_mapping_vs.h  normalmap.cpp  normalmap.h  scene.cpp  scene.h
example/pbr/: camera.cpp  camera.h  drawable.cpp  drawable.h  env.cpp  env.h  ibl_specular_textured.cpp  ibl_specular_textured.h  image.cpp  image.h  imageloader.cpp  imageloader.h  main.cpp  mesh.cpp  mesh.h  meson.build  pbr_fs.h  pbr_vs.h  pbrmaterial.cpp  pbrmaterial.h  renderer.cpp  renderer.h  root_directory.h  skybox.cpp  skybox.h
example/pbr/shaders/: pbr_vs.h
include/glo/: error_handler.h  fbo.h  mesh.h  shader.h  texture.h  vao.h
include/grapho/: euclidean_transform.h  image.h  mesh.h  orbitview.h  pixelformat.h  vars.h  vertexlayout.h  viewport.h
include/grapho/camera/: camera.h  orbitview.h  ray.h  viewport.h
include/grapho/dx11/: buffer.h  drawable.h  shader.h  texture.h
include/grapho/gl3/: cubemapper.h  cuberenderer.h  error.h  fbo.h  material.h  mesh.h  pbr.h  shader.h  shader.h~  texture.h  ubo.h  vao.h
include/grapho/gl3/shaders/: pbr_fs.h
include/grapho/imgui/: csscolor.h  dockspace.h  widgets.h
src/: build.zig  meson.build  shader.cpp  vao.cpp
src/grapho/: dxmath_stub.h  euclidean_transform.cpp  euclidean_transform.h  fileutil.h  mesh.h  vars.cpp  vars.h  vertexlayout.h
src/grapho/camera/: camera.cpp  camera.h  ray.cpp  ray.h
src/grapho/gl3/: cuberenderer.cpp  cuberenderer.h  error_check.cpp  error_check.h  fbo.cpp  fbo.h  pbr.h  shader.h  texture.cpp  vao.cpp  vao.h
src/grapho/imgui/: widgets.h
subprojects/: logl.wrap
subprojects/packagefiles/logl/: meson.build
