executable(
    'normalmap',
    [
        'main.cpp',
        'normalmap.cpp',
        'scene.cpp',
    ],
    install: true,
    dependencies: [
        glfw_dep,
        glew_dep,
        logl_dep,
        grapho_dep,
        imgui_dep,
        directxmath_dep,
        platform_dep,
        glm_dep,
    ],
)
