executable(
    'pbr',
    [
        'main.cpp',
        'ibl_specular_textured.cpp',
        'renderer.cpp',
        'pbrmaterial.cpp',
        'mesh.cpp',
        'image.cpp',
    ],
    install: true,
    dependencies: [
        glfw_dep,
        glew_dep,
        logl_dep,
        grapho_dep,
    ],
)
