executable(
    'pbr',
    [
        'main.cpp',
        'renderer.cpp',
        'pbrmaterial.cpp',
        'mesh.cpp',
        'image.cpp',
        'env.cpp',
    ],
    install: true,
    dependencies: [
        glfw_dep,
        glew_dep,
        logl_dep,
        grapho_dep,
    ],
)
