executable(
    'pbr',
    [
        'main.cpp',
        'pbrmaterial.cpp',
        'mesh.cpp',
        'image.cpp',
        'env.cpp',
        'drawable.cpp',
        'skybox.cpp',
    ],
    install: true,
    dependencies: [
        glfw_dep,
        glew_dep,
        logl_dep,
        grapho_dep,
    ],
)
